--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,13 @@
 </head>
 
 <body>
-    <h1>D3 Playground</h1>
+    <div class="container">
+        <h1>D3 Playground</h1>
+        <div class="wrapper">
+            <div id="viz" />
+        </div>
+    </div>
+
 </body>
 
 </html>
