--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,10 @@
 </head>
 
 <body>
-    <div class="container">
+    <div id="page-content">
         <h1>D3 Playground</h1>
-        <div class="wrapper">
-            <div id="viz" />
-        </div>
+        <svg id="viz" />
     </div>
-
 </body>
 
 </html>
