--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 <body>
     <div id="page-content">
         <h1>D3 Playground</h1>
-        <svg id="viz" />
+        <svg id="viz" viewbox="0 0 1 1" preserveAspectRatio="xMidYMid slice" />
     </div>
 </body>
 
